--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <a href="#" class="link-arrow">Learn more</a>
+    <span class="badge badge--secondary">10% Off</span>
+    <span class="badge badge--primary badge--small">10% Off</span>
   </body>
 </html>
