Build the button component

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <span class="icon-container">
-      <svg class="icon icon--primary">
-        <use xlink:href="/img/sprite.svg#icon-database"></use>
-      </svg>
-    </span>
+    <a href="#" class="btn btn--primary">Register</a>
+    <a href="#" class="btn btn--primary btn--block">Register</a>
+    <button class="btn btn--secondary">Click now</button>
+    <button class="btn btn--outline">Take action</button>
   </body>
 </html>
