--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <a href="#" class="btn btn--primary">Register</a>
-    <a href="#" class="btn btn--primary btn--block">Register</a>
-    <button class="btn btn--secondary">Click now</button>
-    <button class="btn btn--outline">Take action</button>
+    <input type="text" class="input" placeholder="Enter your name" />
   </body>
 </html>
