--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="input-group">
-      <input type="text" class="input" placeholder="Enter your name" />
-      <button class="btn btn--accent">Search</button>
+    <div class="card card--primary">
+      <header class="card__heading">Separation of powers</header>
+      <div class="card__body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+        soluta iste ad quaerat accusantium possimus pariatur vitae aspernatur,
+        tempora facilis?
+      </div>
     </div>
   </body>
 </html>
