--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="plan">
+    <div class="plan plan--popular">
       <div class="card card--primary">
         <header class="card__heading">
           <h3 class="plan__name">Entry</h3>
