--- a/index.html
+++ b/index.html
@@ -14,25 +14,20 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="plan plan--popular">
-      <div class="card card--primary">
-        <header class="card__heading">
-          <h3 class="plan__name">Entry</h3>
-          <span class="plan__price">$14</span>
-          <span class="plan__billing-cycle">/month</span>
-          <span class="badge badge--primary badge--small">10% Off</span>
-          <span class="plan__description">Easy start on the cloud</span>
-        </header>
-        <div class="card__body">
-          <ul class="list list--tick mb-4">
-            <li class="list__item">Unlimited Websites</li>
-            <li class="list__item">Unlimited Bandwidth</li>
-            <li class="list__item">100GB SSD Storage</li>
-            <li class="list__item">3GB RAM</li>
-            <li class="list__item">Free Domain</li>
-          </ul>
-          <button class="btn btn--outline btn--block">Take action</button>
-        </div>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <use xlink:href="/img/sprite.svg#icon-database"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title mb-1">Easy Start and Manage Updates</h3>
+        <p class="media__description">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
+          recusandae repudiandae, consequuntur odio dignissimos quisquam sunt
+          est necessitatibus cupiditate quis, facere veniam molestiae. Neque
+          necessitatibus odit unde exercitationem, veniam illo?
+        </p>
       </div>
     </div>
   </body>
