Implement a quote component

--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="/img/sprite.svg#icon-database"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title mb-1">Easy Start and Manage Updates</h3>
-        <p class="media__description">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
-          recusandae repudiandae, consequuntur odio dignissimos quisquam sunt
-          est necessitatibus cupiditate quis, facere veniam molestiae. Neque
-          necessitatibus odit unde exercitationem, veniam illo?
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum officiis
+        quas voluptates cumque odio iure ea itaque nostrum quisquam cupiditate
+        eos illum consequatur vero, totam reiciendis. Nesciunt dolore enim
+        impedit!
+      </p>
+      <footer>
+        <div class="media quote__identity">
+          <div class="media__image quote__line">
+            <svg class="icon icon--primary">
+              <use xlink:href="/img/sprite.svg#icon-minus"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title">John Doe</h3>
+            <p class="media__description quote__company">Tulsa Company Ltd.</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
