--- a/index.html
+++ b/index.html
@@ -14,17 +14,6 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="callout callout--primary">
-      <div class="grid grid--cols-2">
-        <div class="callout__content">
-          <h2 class="mb-1 callout__heading">Ready to Get Started?</h2>
-          <p class="callout__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ex
-            commodi quam aperiam dolor quibusdam maiores illo est expedita hic.
-          </p>
-        </div>
-        <a href="#" class="btn btn--secondary">Get Started</a>
-      </div>
-    </div>
+    <script src="/js/main.js"></script>
   </body>
 </html>
