Build the block component

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <section class="block">
+      <div class="container">
+        <h2 class="block__heading">Dare to Dream</h2>
+        <p class="block__text">Lorem ipsum dolor sit amet.</p>
+      </div>
+    </section>
+
+    <section class="block block__dark block--skewed-right">
+      <div class="block__heading-container container">
+        <h2 class="block__heading">Dare to Dream</h2>
+        <p class="block__text">Lorem ipsum Dare to Dream dolor sit amet.</p>
+      </div>
+    </section>
+
     <script src="/js/main.js"></script>
   </body>
 </html>
