Build the navigation bar

--- a/index.html
+++ b/index.html
@@ -14,19 +14,26 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block">
-      <div class="container">
-        <h2 class="block__heading">Dare to Dream</h2>
-        <p class="block__text">Lorem ipsum dolor sit amet.</p>
+    <header class="header">
+      <div class="header__content">
+        <a class="logo" href="#">
+          <img class="logo__image" src="/img/logo.png" alt="Brand logo" />
+          <h1 class="logo__brand">Cloudify</h1>
+        </a>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">Pricing</li>
+            <li class="nav__item">Contact</li>
+            <li class="nav__item">About</li>
+          </ul>
+        </nav>
+        <div class="hamburger">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
       </div>
-    </section>
-
-    <section class="block block__dark block--skewed-right">
-      <div class="block__heading-container container">
-        <h2 class="block__heading">Dare to Dream</h2>
-        <p class="block__text">Lorem ipsum Dare to Dream dolor sit amet.</p>
-      </div>
-    </section>
+    </header>
 
     <script src="/js/main.js"></script>
   </body>
