Build the hero section

--- a/index.html
+++ b/index.html
@@ -14,26 +14,23 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="header__content">
-        <a class="logo" href="#">
-          <img class="logo__image" src="/img/logo.png" alt="Brand logo" />
-          <h1 class="logo__brand">Cloudify</h1>
-        </a>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">Pricing</li>
-            <li class="nav__item">Contact</li>
-            <li class="nav__item">About</li>
-          </ul>
-        </nav>
-        <div class="hamburger">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
+    <section class="block block--dark block--skewed-right">
+      <div class="container grid grid--cols-2">
+        <header class="block__heading-container hero__content">
+          <h1 class="block__heading">Cloud hosting for Pros</h1>
+          <p class="hero__tagline">
+            Deploy your web applications in less than a minute
+          </p>
+          <a href="#" class="btn btn--accent btn--long">Get Started</a>
+        </header>
+
+        <img
+          class="hero__image"
+          src="/img/banner.png"
+          alt="Image of cloud hosting"
+        />
       </div>
-    </header>
+    </section>
 
     <script src="/js/main.js"></script>
   </body>
