--- a/index.html
+++ b/index.html
@@ -14,22 +14,36 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block block--dark block--skewed-right">
-      <div class="container grid grid--cols-2">
-        <header class="block__heading-container hero__content">
-          <h1 class="block__heading">Cloud hosting for Pros</h1>
-          <p class="hero__tagline">
-            Deploy your web applications in less than a minute
-          </p>
-          <a href="#" class="btn btn--accent btn--long">Get Started</a>
-        </header>
+    <section class="container block domain">
+      <header class="block__header">
+        <h2 class="mb-1">Starting at $9 per month</h2>
+        <p class="mb-4">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quaerat?
+        </p>
+      </header>
 
-        <img
-          class="hero__image"
-          src="/img/banner.png"
-          alt="Image of cloud hosting"
-        />
+      <div class="input-group__container">
+        <div class="input-group">
+          <input type="text" class="input" placeholder="Enter your name" />
+          <button class="btn btn--accent">
+            <svg class="icon icon--white">
+              <use xlink:href="/img/sprite.svg#icon-magnifying-glass"></use>
+            </svg>
+            <span class="domain__btn-text">Search</span>
+          </button>
+        </div>
       </div>
+
+      <ul class="list domain__prices">
+        <li>
+          <span class="badge badge--primary">.com $9.26</span>
+        </li>
+        <li>.net $7.91</li>
+        <li>.xyz $10.15</li>
+        <li>.space $12.98</li>
+        <li>.gh $10.99</li>
+        <li>.info $14.15</li>
+      </ul>
     </section>
 
     <script src="/js/main.js"></script>
