--- a/index.html
+++ b/index.html
@@ -14,37 +14,73 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="container block domain">
-      <header class="block__header">
-        <h2 class="mb-1">Starting at $9 per month</h2>
-        <p class="mb-4">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quaerat?
-        </p>
-      </header>
-
-      <div class="input-group__container">
-        <div class="input-group">
-          <input type="text" class="input" placeholder="Enter your name" />
-          <button class="btn btn--accent">
-            <svg class="icon icon--white">
-              <use xlink:href="/img/sprite.svg#icon-magnifying-glass"></use>
-            </svg>
-            <span class="domain__btn-text">Search</span>
-          </button>
+    <div class="grid grid--cols-3 plans container">
+      <div class="plan">
+        <div class="card card--secondary">
+          <header class="card__heading">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% Off</span>
+            <span class="plan__description">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick mb-4">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100GB SSD Storage</li>
+              <li class="list__item">3GB RAM</li>
+              <li class="list__item">Free Domain</li>
+            </ul>
+            <button class="btn btn--secondary btn--block">Take action</button>
+          </div>
         </div>
       </div>
 
-      <ul class="list domain__prices">
-        <li>
-          <span class="badge badge--primary">.com $9.26</span>
-        </li>
-        <li>.net $7.91</li>
-        <li>.xyz $10.15</li>
-        <li>.space $12.98</li>
-        <li>.gh $10.99</li>
-        <li>.info $14.15</li>
-      </ul>
-    </section>
+      <div class="plan plan--popular">
+        <div class="card card--primary">
+          <header class="card__heading">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--primary badge--small">10% Off</span>
+            <span class="plan__description">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick mb-4">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100GB SSD Storage</li>
+              <li class="list__item">3GB RAM</li>
+              <li class="list__item">Free Domain</li>
+            </ul>
+            <button class="btn btn--outline btn--block">Take action</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="plan">
+        <div class="card card--secondary">
+          <header class="card__heading">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% Off</span>
+            <span class="plan__description">Easy start on the cloud</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick mb-4">
+              <li class="list__item">Unlimited Websites</li>
+              <li class="list__item">Unlimited Bandwidth</li>
+              <li class="list__item">100GB SSD Storage</li>
+              <li class="list__item">3GB RAM</li>
+              <li class="list__item">Free Domain</li>
+            </ul>
+            <button class="btn btn--secondary btn--block">Take action</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="/js/main.js"></script>
   </body>
