--- a/index.html
+++ b/index.html
@@ -14,34 +14,71 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block grid grid--cols-2 features container">
-      <div class="feature__content">
-        <span class="icon-container mb-2">
-          <svg class="icon icon--primary">
-            <use xlink:href="/img/sprite.svg#icon-power-plug"></use>
-          </svg>
-        </span>
+    <footer class="block footer__container">
+      <div class="grid container footer">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Privacy Policy</h2>
+            <span class="icon-container">
+              <svg class="icon collapsible__chevron">
+                <use xlink:href="/img/sprite.svg#icon-chevron-thin-down"></use>
+              </svg>
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list footer__links">
+              <li class="footer__list-items">Products</li>
+              <li class="footer__list-items">News</li>
+              <li class="footer__list-items">Privacy Policy</li>
+            </ul>
+          </div>
+        </section>
 
-        <h3 class="mb-1">Super Easy to Use</h3>
-        <p class="mb-2">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus,
-          laboriosam cum libero provident officia facere non, optio repellendus
-          odio deleniti corporis temporibus sunt dicta distinctio tempora, quasi
-          odio deleniti corporis temporibus sunt dicta distinctio tempora, quasi
-          odio deleniti corporis temporibus sunt dicta distinctio tempora, quasi
-        </p>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Get updates</h2>
+            <span class="icon-container">
+              <svg class="icon collapsible__chevron">
+                <use xlink:href="/img/sprite.svg#icon-chevron-thin-down"></use>
+              </svg>
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list footer__links">
+              <li class="footer__list-items">Products</li>
+              <li class="footer__list-items">News</li>
+              <li class="footer__list-items">Privacy Policy</li>
+            </ul>
+          </div>
+        </section>
 
-        <a href="#" class="link-arrow">Learn more</a>
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading footer__heading">Get News</h2>
+            <span class="icon-container">
+              <svg class="icon collapsible__chevron">
+                <use xlink:href="/img/sprite.svg#icon-chevron-thin-down"></use>
+              </svg>
+            </span>
+          </header>
+          <div class="collapsible__content">
+            <ul class="list footer__links">
+              <li class="footer__list-items">Products</li>
+              <li class="footer__list-items">News</li>
+              <li class="footer__list-items">Privacy Policy</li>
+            </ul>
+          </div>
+        </section>
+
+        <div class="footer__logo">
+          <a class="logo" href="#">
+            <img class="logo__image" src="/img/logo.png" alt="Brand logo" />
+            <h1 class="logo__brand">Cloudify</h1>
+          </a>
+          <p class="copyright">Copyright &copy; 2024 Cloudify</p>
+        </div>
       </div>
-
-      <div class="feature__image-container">
-        <img
-          class="feature__image"
-          src="/img/feature-1.webp"
-          alt="An image of a dashboard"
-        />
-      </div>
-    </section>
+    </footer>
 
     <script src="/js/main.js"></script>
   </body>
