--- a/index.html
+++ b/index.html
@@ -14,71 +14,82 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <footer class="block footer__container">
-      <div class="grid container footer">
-        <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Privacy Policy</h2>
-            <span class="icon-container">
-              <svg class="icon collapsible__chevron">
-                <use xlink:href="/img/sprite.svg#icon-chevron-thin-down"></use>
-              </svg>
-            </span>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list footer__links">
-              <li class="footer__list-items">Products</li>
-              <li class="footer__list-items">News</li>
-              <li class="footer__list-items">Privacy Policy</li>
-            </ul>
-          </div>
-        </section>
+    <section class="block block--dark showcase">
+      <h1 class="showcase__heading">User-Friendly Control Panel</h1>
+      <div class="grid container showcase__content">
+        <img
+          src="/img/showcase.webp"
+          alt="Image a control panel"
+          class="showcase__image"
+        />
 
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Get updates</h2>
-            <span class="icon-container">
-              <svg class="icon collapsible__chevron">
-                <use xlink:href="/img/sprite.svg#icon-chevron-thin-down"></use>
-              </svg>
-            </span>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list footer__links">
-              <li class="footer__list-items">Products</li>
-              <li class="footer__list-items">News</li>
-              <li class="footer__list-items">Privacy Policy</li>
-            </ul>
-          </div>
-        </section>
+        <div class="showcase__media">
+          <ul class="list">
+            <li class="mb-4">
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="/img/sprite.svg#icon-database"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title mb-1">
+                    Easy Start and Manage Updates
+                  </h3>
+                  <p class="media__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Vitae recusandae repudiandae, consequuntur odio dignissimos
+                    quisquam sunt est necessitatibus cupiditate quis, facere
+                    veniam molestiae. Neque necessitatibus odit unde
+                    exercitationem, veniam illo?
+                  </p>
+                </div>
+              </div>
+            </li>
 
-        <section class="collapsible footer__section">
-          <header class="collapsible__header">
-            <h2 class="collapsible__heading footer__heading">Get News</h2>
-            <span class="icon-container">
-              <svg class="icon collapsible__chevron">
-                <use xlink:href="/img/sprite.svg#icon-chevron-thin-down"></use>
-              </svg>
-            </span>
-          </header>
-          <div class="collapsible__content">
-            <ul class="list footer__links">
-              <li class="footer__list-items">Products</li>
-              <li class="footer__list-items">News</li>
-              <li class="footer__list-items">Privacy Policy</li>
-            </ul>
-          </div>
-        </section>
+            <li class="mb-4">
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="/img/sprite.svg#icon-database"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title mb-1">Staging, GIT and WP-CLI</h3>
+                  <p class="media__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Vitae recusandae repudiandae, consequuntur odio dignissimos
+                    quisquam sunt est necessitatibus cupiditate quis, facere
+                    veniam molestiae. Neque necessitatibus odit unde
+                    exercitationem, veniam illo?
+                  </p>
+                </div>
+              </div>
+            </li>
 
-        <div class="footer__logo">
-          <a class="logo" href="#">
-            <img class="logo__image" src="/img/logo.png" alt="Brand logo" />
-            <h1 class="logo__brand">Cloudify</h1>
-          </a>
-          <p class="copyright">Copyright &copy; 2024 Cloudify</p>
+            <li>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon icon--primary">
+                    <use xlink:href="/img/sprite.svg#icon-database"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title mb-1">Dynamic Caching and More</h3>
+                  <p class="media__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Vitae recusandae repudiandae, consequuntur odio dignissimos
+                    quisquam sunt est necessitatibus cupiditate quis, facere
+                    veniam molestiae. Neque necessitatibus odit unde
+                    exercitationem, veniam illo?
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
-    </footer>
+    </section>
 
     <script src="/js/main.js"></script>
   </body>
