--- a/index.html
+++ b/index.html
@@ -14,79 +14,53 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block block--dark showcase">
-      <h1 class="showcase__heading">User-Friendly Control Panel</h1>
-      <div class="grid container showcase__content">
-        <img
-          src="/img/showcase.webp"
-          alt="Image a control panel"
-          class="showcase__image"
-        />
+    <section class="block">
+      <header class="block__heading-container mb-4">
+        <h2>What Our Customers Are Saying</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+          mollitia?
+        </p>
+      </header>
 
-        <div class="showcase__media">
-          <ul class="list">
-            <li class="mb-4">
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="/img/sprite.svg#icon-database"></use>
-                  </svg>
-                </div>
-                <div class="media__body">
-                  <h3 class="media__title mb-1">
-                    Easy Start and Manage Updates
-                  </h3>
-                  <p class="media__description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vitae recusandae repudiandae, consequuntur odio dignissimos
-                    quisquam sunt est necessitatibus cupiditate quis, facere
-                    veniam molestiae. Neque necessitatibus odit unde
-                    exercitationem, veniam illo?
-                  </p>
-                </div>
+      <div class="container">
+        <div class="card testimonial">
+          <div class="grid grid--cols-2">
+            <div class="testimonial__image-container">
+              <div class="testimonial__icon">
+                <img src="/img/double-quotes.svg" alt="Double quotes" />
               </div>
-            </li>
+              <img
+                class="testimonial__image"
+                src="/img/testimonial.webp"
+                alt="A happy smilling customer"
+              />
+            </div>
 
-            <li class="mb-4">
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="/img/sprite.svg#icon-database"></use>
-                  </svg>
+            <blockquote class="quote testimonial__quote">
+              <p class="quote__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                officiis quas voluptates cumque odio iure ea itaque nostrum
+                quisquam cupiditate eos illum consequatur vero, totam
+                reiciendis. Nesciunt dolore enim impedit!
+              </p>
+              <footer>
+                <div class="media quote__identity">
+                  <div class="media__image quote__line">
+                    <svg class="icon icon--primary">
+                      <use xlink:href="/img/sprite.svg#icon-minus"></use>
+                    </svg>
+                  </div>
+                  <div class="media__body">
+                    <h3 class="media__title">John Doe</h3>
+                    <p class="media__description quote__company">
+                      Tulsa Company Ltd.
+                    </p>
+                  </div>
                 </div>
-                <div class="media__body">
-                  <h3 class="media__title mb-1">Staging, GIT and WP-CLI</h3>
-                  <p class="media__description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vitae recusandae repudiandae, consequuntur odio dignissimos
-                    quisquam sunt est necessitatibus cupiditate quis, facere
-                    veniam molestiae. Neque necessitatibus odit unde
-                    exercitationem, veniam illo?
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="media">
-                <div class="media__image">
-                  <svg class="icon icon--primary">
-                    <use xlink:href="/img/sprite.svg#icon-database"></use>
-                  </svg>
-                </div>
-                <div class="media__body">
-                  <h3 class="media__title mb-1">Dynamic Caching and More</h3>
-                  <p class="media__description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Vitae recusandae repudiandae, consequuntur odio dignissimos
-                    quisquam sunt est necessitatibus cupiditate quis, facere
-                    veniam molestiae. Neque necessitatibus odit unde
-                    exercitationem, veniam illo?
-                  </p>
-                </div>
-              </div>
-            </li>
-          </ul>
+              </footer>
+            </blockquote>
+          </div>
         </div>
       </div>
     </section>
