--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="The cheapest and fastest service so far. Host your website in less than a minute"
+    />
+    <meta property="og:title" content="Cloudify..." />
+    <meta property="og:description" content="Cloud hosting giants" />
+    <meta property="og:type" content="website" />
+    <title>Cloudify - Host your website in less than a minute</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
